--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "esbuild index.js --bundle  --outfile=bundle.js --watch"
+    
   },
   "author": "claire",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jest-fetch-mock": "^3.0.3"
+  }
 }
